--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/main.css">
+    <title>Orel Vaizman's Meme Generator!</title>
 </head>
-<body>
-    
+
+<body onload="init()">
+    <h1>Let the party begin!</h1>
+    <div class="canvas-container">
+        <canvas id="memegen-canvas" height="450" width="450"></canvas>
+    </div>
+    <script src="js/util-service.js"></script>
+    <script src="js/storage-service.js"></script>
+    <script src="js/memegen-service.js"></script>
+    <script src="js/memegen-controller.js"></script>
 </body>
+
 </html>
