--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div class="canvas-container">
         <canvas id="memegen-canvas" height="450" width="450"></canvas>
     </div>
+    <input type="text" name="text" class="text-input" id="text" placeholder="Enter Text Here!">
+
     <script src="js/util-service.js"></script>
     <script src="js/storage-service.js"></script>
     <script src="js/memegen-service.js"></script>
