--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <div class="canvas-container">
         <canvas id="memegen-canvas" height="450" width="450"></canvas>
     </div>
-    <input type="text" name="text" class="text-input" id="text" placeholder="Enter Text Here!">
-
+    <div class="editor-container">
+        <input type="text" name="text" class="text-input" id="text" placeholder="Enter Text Here!">
+    </div>
+    <div class="gallery-container"></div>
     <script src="js/util-service.js"></script>
     <script src="js/storage-service.js"></script>
     <script src="js/memegen-service.js"></script>
