before the big render change

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     </div>
     <div class="editor-container">
         <input type="text" name="text" class="text-input" id="text" placeholder="Enter Text Here!">
+        <button class="increase-size" onclick="onSetFontSize('increase')">+</button>
+        <button class="decrease-size" onclick="onSetFontSize('decrease')">-</button>
+        <button class="decrease-size" onclick="onSwitchLines()">Switch Line</button>
+        <button class="decrease-size" onclick="onMoveLine('up')">Move it UP!</button>
+        <button class="decrease-size" onclick="onMoveLine('down')">Move it DOWN!</button>
     </div>
     <div class="gallery-container"></div>
     <script src="js/util-service.js"></script>
