Friday - Last UPDATE

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         </button>
                     </div>
                     <div class="fourth-buttons-bar">
-                        <button>Download</button>
+                        <a href="#" onclick="onDownloadImg(this)" download="ProMeme-01.jpg">Download</a>
                         <button>Share</button>
                         <button>Save</button>
                     </div>
