--- a/index.html
+++ b/index.html
@@ -29,15 +29,46 @@
     <main class="main-content container">
         <div class="memegen-container flex">
             <div class="meme-display-container">
-                <canvas id="memegen-canvas" height="450" width="450"></canvas>
-                <div class="editor-container flex column">
+                <canvas id="memegen-canvas" height="450" width="450" class="canvas-style"></canvas>
+                <div class="editor-container flex column align-center">
                     <input type="text" name="text" class="text-input" id="text" placeholder="Enter Text Here!">
-                    <div class="first-buttons">
+                    <div class="first-buttons-bar flex">
                         <button class="editor-buttons" onclick="onSwitchLines()">
                             <img src="imgs/buttons/switch-lines.png">
                         </button>
-                        <button class="editor-buttons"><img src="imgs/buttons/add.png"></button>
-                        <button class="editor-buttons"><img src="imgs/buttons/trash.png"></button>
+                        <button class="editor-buttons">
+                            <img src="imgs/buttons/add.png">
+                        </button>
+                        <button class="editor-buttons">
+                            <img src="imgs/buttons/trash.png">
+                        </button>
+                    </div>
+                    <div class="second-buttons-bar flex">
+                        <button class="editor-buttons" onclick="onSetFontSize('increase')">
+                            <img src="imgs/buttons/increase_font_-_icon.png">
+                        </button>
+                        <button class="editor-buttons" onclick="onSetFontSize('decrease')"><img
+                                src="imgs/buttons/decrease_font_-_icon.png"></button>
+                        <button class="editor-buttons">
+                            <img src="imgs/buttons/align-to-left.png">
+                        </button>
+                        <button class="editor-buttons">
+                            <img src="imgs/buttons/center-text-alignment.png">
+                        </button>
+                        <button class="editor-buttons">
+                            <img src="imgs/buttons/align-to-right.png">
+                        </button>
+                    </div>
+                    <div class="third-buttons-bar flex">
+                        <select class="font-selector">
+                            <option value="impact">impact</option>
+                        </select>
+                        <button class="editor-buttons">
+                            <img src="imgs/buttons/A.png">
+                        </button>
+                        <button class="editor-buttons">
+                            <img src="imgs/buttons/paint-board-and-brush.png">
+                        </button>
                     </div>
                     <button class="increase-size" onclick="onSetFontSize('increase')">+</button>
                     <button class="decrease-size" onclick="onSetFontSize('decrease')">-</button>
@@ -62,10 +93,9 @@
                 </section> -->
     </main>
     <footer class="main-footer flex column align-center">
-        <div class="footer-logo colored-dot logo"><a href="#">Blogin</a>.</div>
-        <small class="copyright">© 2014 Blogin.com - All Rights Reserved - Find more free Templates at <span
-                class="bolded-span">Pixelhint.com</span></small>
-        <ul class="nav-social clean-list flex">
+        <div class="footer-logo colored-dot logo"><a href="#">Pro-MeMe</a>.</div>
+        <small class="copyright">© Orel Vaizman © Pro-MeMe ©</small>
+        <!-- <ul class="nav-social clean-list flex">
             <li class="facebook-icon social-li"><a href="" class="socialmedia-link"><i
                         class="fab fa-facebook-f"></i></a></li>
             <li class="twitter-icon social-li"><a href="" class="socialmedia-link"><i class="fab fa-twitter"></i></a>
@@ -74,7 +104,7 @@
             </li>
             <li class="dribble-icon social-li"><a href="" class="socialmedia-link"><i class="fab fa-dribbble"></i></a>
             </li>
-        </ul>
+        </ul> -->
     </footer>
     <script src="js/util-service.js"></script>
     <script src="js/storage-service.js"></script>
