JS/Canvas-Editor-Update

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                         <button class="editor-buttons" onclick="onSwitchLines()">
                             <img src="imgs/buttons/switch-lines.png">
                         </button>
-                        <button class="editor-buttons">
-                            <img src="imgs/buttons/add.png">
+                        <button class="editor-buttons" onclick="onAddText()">
+                            <img src=" imgs/buttons/add.png">
                         </button>
-                        <button class="editor-buttons">
+                        <button class="editor-buttons" onclick="onDeleteText()">
                             <img src="imgs/buttons/trash.png">
                         </button>
                     </div>
@@ -49,13 +49,13 @@
                         </button>
                         <button class="editor-buttons" onclick="onSetFontSize('decrease')"><img
                                 src="imgs/buttons/decrease_font_-_icon.png"></button>
-                        <button class="editor-buttons">
+                        <button class="editor-buttons" onclick="onAlignText('left')">
                             <img src="imgs/buttons/align-to-left.png">
                         </button>
-                        <button class="editor-buttons">
+                        <button class="editor-buttons" onclick="onAlignText('center')">
                             <img src="imgs/buttons/center-text-alignment.png">
                         </button>
-                        <button class="editor-buttons">
+                        <button class="editor-buttons" onclick="onAlignText('right')">
                             <img src="imgs/buttons/align-to-right.png">
                         </button>
                     </div>
