--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                 <option value="verdana">Verdana</option>
                                 <option value="georgia">Georgia</option>
                             </select>
-                            <button class="editor-buttons">
+                            <button class="editor-buttons" onclick="onSetStrokeStyle(this.value)">
                                 <img src="imgs/buttons/A.png">
                             </button>
                             <button class="editor-buttons">
