--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <li class="close-menu-li"><button class="close-menu" onclick="onToggleMenu()"><i
                         class="fas fa-times"></i></button></li>
             <li><a href="index.html">gallery</a></li>
+            <li><a onclick="openSavedMemesGallery()">memes</a></li>
             <li><a href="about.html">about</a></li>
-            <li onclick="openSavedMemesGallery()">memes</li>
         </ul>
     </header>
     <main class="main-container">
