--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         </section>
     </main>
 
-    <main class="main-content container">
-        <div class="memegen-container flex">
+    <main class="main-content container flex">
+        <!-- <div class="memegen-container flex"> -->
             <div class="meme-display-container">
                 <canvas id="memegen-canvas" height="450" width="450" class="canvas-style"></canvas>
                 <div class="editor-container flex column align-center">
@@ -111,7 +111,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        <!-- </div> -->
 
         <!-- <section class="modal">
                     <h1>Join us to get access to the latest stories!</h1>
